...
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import kotlinx.coroutines.launch

object RichTooltipTestTags {
    // Screen-level
    const val BUTTON = "button"
}

/**
 * A reusable Tooltip component.
 *
 * This wrapper around Material3's [RichTooltip] provides:
...
